--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Sample form</title>
+        <title>Credit Card Testing</title>
         <meta charset="utf-8" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
@@ -17,72 +17,9 @@
         <script type="text/javascript"
                 src="js/cardHandler.js">
         </script>
+
         <script type="text/javascript"
-                src="js/newProfile.js">
-        </script>
-
-        <script type="text/javascript">
-            function newProfile() {
-                var descriptor = document.getElementById("dataDescriptor").value;
-                var value = document.getElementById("dataValue").value;
-                var firstName = document.getElementById("firstName").value;
-                var lastName = document.getElementById("lastName").value;
-                var company = document.getElementById("company").value;
-                var address = document.getElementById("address").value;
-                var city = document.getElementById("city").value;
-                var state = document.getElementById("state").value;
-                var zip = document.getElementById("zip").value;
-                var country = document.getElementById("country").value;
-                var phone = document.getElementById("phone").value;
-                var email = document.getElementById("email").value;
-
-                $.ajax({
-                    url: "php/newProfile.php",
-                    type: 'post',
-                    data: {
-                        "descriptor": descriptor,
-                        "value": value,
-                        "firstName": firstName,
-                        "lastName": lastName,
-                        "company": company,
-                        "address": address,
-                        "city": city,
-                        "state": state,
-                        "zip": zip,
-                        "country": country,
-                        "phone": phone,
-                        "email": email
-                    },
-                    success: function(response) {
-                        document.getElementById("demo").innerHTML = response;
-                    },
-                    failure: function(error) {
-                        document.getElementById("demo").innerHTML = error;
-                    }
-                });
-            }
-
-                
-            function chargeCard() {
-                var profileId = document.getElementById("profile").value;
-                var paymentId = document.getElementById("payment").value;
-                var amount = document.getElementById("amount").value;
-                var temp = document.getElementById("items");
-                var item = temp.options[temp.selectedIndex].text;
-                $.ajax({
-                    url: "php/chargeCard.php",
-                    type: 'post',
-                    data: { "profileId": profileId, "paymentId": paymentId, "amount": amount},
-                    success: function(response) {
-                        document.getElementById("demo3").innerHTML =
-                            item +
-                            response;
-                    },
-                    failure: function(error) {
-                        document.getElementById("demo3").innerHTML = error;
-                    }
-                });
-            }
+                src="js/formHandler.js">
         </script>
 
 
