Remove unnecessary google-forms-esque header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Credit Card Testing</title>
+        <title>Authorize.Net Testing</title>
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Bootstrap core CSS -->
@@ -31,9 +31,9 @@
                 src="js/cardHandler.js">
         </script>
 
-        <nav class="navbar navbar-expand-lg navbar-dark primary-color-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark primary-color">
             <!-- Navbar brand -->
-            <a class="navbar-brand" href="">Credit Card Testing</a>
+            <a class="navbar-brand" href="">Authorize.Net Testing</a>
 
             <!-- Collapse button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
@@ -49,7 +49,7 @@
 
                     <!-- Dropdown -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select Form...</a>
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select Form</a>
                         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" id="showCharge">Charge Profile</a>
                             <a class="dropdown-item" id="showProfile">Create New Profile</a>
@@ -59,10 +59,11 @@
                 </ul>
             </div>
         </nav>
-        <div class="edge-header primary-color"></div>
+        <!--<div class="edge-header primary-color"></div>-->
 
         <div class="collapse in" id="chargeCard">
-        <div class="container free-bird">
+        <!--<div class="container free-bird">-->
+        <div class="container mt-4 mb-2">
             <div class="row align-items-center">
                 <div class="col-lg-6 mx-auto" align="center">
                     <div class="card">
@@ -114,9 +115,9 @@
             </div>
         </div>
         </div>
-        <h2 class="mb-3"></h2>
         <div class="collapse" id="createProfile" >
-        <div class="container free-bird">
+        <!--<div class="container free-bird">-->
+        <div class="container mt-4 mb-2">
             <div class="row align-items-center">
                 <div class="col-lg-6 mx-auto" align="center">
                     <div class="card">
@@ -228,7 +229,6 @@
             </div>
         </div>
         </div>
-        <h2 class="mb-5"></h2>
     <!-- SCRIPTS -->
     <!-- JQuery -->
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
