--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select Form</a>
                         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" id="showInitial">Initial Information</a>
                             <a class="dropdown-item" id="showCharge">Charge Profile</a>
                             <a class="dropdown-item" id="showProfile">Create New Profile</a>
                         </div>
@@ -61,8 +62,63 @@
         </nav>
         <!--<div class="edge-header primary-color"></div>-->
 
-        <div class="collapse mt-5" id="initialHeader" align="center">
-            <h2 class="h2-responsive text-muted">Please select a form.</h1>
+        <div class="collapse mt-5" id="initialHeader">
+            <div class="row">
+                <div class="col-lg-6 mx-auto">
+                    <h2 class="h2-responsive text-muted mb-5" align="center">Please select a form.</h2>
+                    <h5 class="h5-responsive text-muted mb-3">
+                        Note: This is a test application. Transactions/profiles occur in sandbox mode only and do not incur real transactions.
+                    </h5>
+                    <h5 class="h5-responsive text-muted">
+                        The following are valid test credit card numbers:
+                    </h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 mx-auto">
+                    <table class="table table-borderless table-hover text-muted">
+                        <tbody>
+                            <tr>
+                                <td scope="row">American Express</th>
+                                <td>370000000000002</td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Discover</td>
+                                <td>6011000000000012</td>
+                            </tr>
+                            <tr>
+                                <td scope="row">JCB</td>
+                                <td>3088000000000017</td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Diners Club/Carte Blanche</td>
+                                <td>38000000000006</td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Visa</td>
+                                <td>
+                                    4007000000027<br>
+                                    4012888818888<br>
+                                    4111111111111111
+                                </td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Mastercard</td>
+                                <td>
+                                    5424000000000015<br>
+                                    2223000010309703<br>
+                                    2223000010309711
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 mx-auto">
+                    <h6 class="h6-responsive text-muted">For more testing information, please visit <a href="https://developer.authorize.net/hello_world/testing_guide/" target="_blank">here</a>.</h6>
+                </div>
+            </div>
         </div>
 
         <div class="collapse in" id="chargeCard">
@@ -242,6 +298,10 @@
 
     <script type="text/javascript">
         $("#initialHeader").collapse('show');
+        $("#showInitial").click(function(){
+            $(".collapse").collapse('hide');
+            $("#initialHeader").collapse('show');
+        });
         $("#showCharge").click(function(){
             $(".collapse").collapse('hide');
             $("#chargeCard").collapse('show');
