small style changes

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select Form</a>
                         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" id="showInitial">Initial Information</a>
-                            <a class="dropdown-item" id="showCharge">Charge Profile</a>
                             <a class="dropdown-item" id="showProfile">Create New Profile</a>
+                            <a class="dropdown-item" id="showCharge">Charge Profile</a>
                         </div>
                     </li>
 
@@ -71,7 +71,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-lg-12 mx-auto">
-                                    <h2 class="h2-responsive text-muted" align="center">Please select a form.</h2>
+                                    <h2 class="h2-responsive" align="center">Authorize.Net Web App</h2>
                                 </div>
                             </div>
                         </div>
@@ -84,15 +84,15 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-lg-12 mx-auto">
-                                    <h5 class="h5-responsive text-muted mb-3">
-                                        Note: This is a test application. Transactions/profiles occur in sandbox mode only and do not incur real transactions.
+                                    <h5 class="h5-responsive mb-3">
+                                        Note: This is a test application. Transactions/profiles occur in sandbox mode only and do not incur real transactions. Select a form from the navbar above.
                                     </h5>
-                                    <h5 class="h5-responsive text-muted">
+                                    <h5 class="h5-responsive">
                                         The following are valid test credit card numbers:
                                     </h5>
                                 </div>
                                 <div class="col-lg-10 mx-auto">
-                                    <table class="table table-borderless table-hover text-muted">
+                                    <table class="table table-borderless table-hover">
                                         <tbody>
                                             <tr>
                                                 <td scope="row">American Express</th>
@@ -132,7 +132,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12 mx-auto">
-                                    <h6 class="h6-responsive text-muted">For more testing information, please visit <a href="https://developer.authorize.net/hello_world/testing_guide/" target="_blank">here</a>.</h6>
+                                    <h6 class="h6-responsive">For more testing information, please visit <a href="https://developer.authorize.net/hello_world/testing_guide/" target="_blank">here</a>.</h6>
                                 </div>
                             </div>
                         </div>
